[package]
name = "create-bitcoin-private-key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
secp256k1 = { version = "0.24.0", features = ["rand"]}
sha2 = "0.10.5"
